@@ -1,9 +1,10 @@
 gforge (3rc1-0+) experimental; urgency=low
 
   * [Christian] Added support for content encoding in util_send_mail
-  * [Christian] Removed .htaccess and put appropriate lines in httpd template 
+  * [Christian] Removed .htaccess and put appropriate lines in httpd template
+  * [Christian] Renamed sf-(un)register functions in (un)register
 
- -- Christian Bayle <bayle@debian.org>  Thu,  6 Mar 2003 16:36:14 +0100
+ -- Christian Bayle <bayle@debian.org>  Mon, 10 Mar 2003 16:30:57 +0100
 
 gforge (3pre9-0+2) experimental; urgency=low
 
